# voice-translate-pro

./: .gitignore  .htaccess  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATION-FEATURES.md  Cargo.toml  DEPLOY-OPTIONS.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  Dockerfile  ENHANCED-CONVERSATION-FEATURES.md  FINAL-INTEGRATION-SUMMARY.md  FINAL-REPORT.md  FINAL-SETUP.md  FIREBASE-SETUP.md  IMAGE_TRANSLATION_FIX.md  IMPROVEMENTS.md  INTEGRATION-REPORT.md  ISSUE_TEMPLATE.md  LICENSE  MANUAL-DEPLOYMENT.md  Makefile  PULL_REQUEST_TEMPLATE.md  Pipfile  QUICK-START.md  README-DEPLOYMENT.md  README-FINAL.md  README.md  SECURITY.md  TESTING-GUIDE.md  Vagrantfile  _redirects  advanced-settings-script.js  advanced-settings-styles.css  advanced-settings.html  ansible.yml  (+91 more)
