[metadata]
name = voice-translator-pro
version = 1.0.0
author = Voice Translator Team
author_email = team@voice-translator-pro.com
description = تطبيق ويب متقدم للترجمة الصوتية والنصية يدعم أكثر من 100 لغة
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/voice-translator-pro
project_urls =
    Bug Reports = https://github.com/your-username/voice-translator-pro/issues
    Source = https://github.com/your-username/voice-translator-pro
    Documentation = https://your-username.github.io/voice-translator-pro/
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Text Processing :: Linguistic
keywords = translation voice speech ocr pwa arabic multilingual

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    black>=23.11.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.7.1
    mkdocs>=1.5.3
    mkdocs-material>=9.4.8
    prometheus-client>=0.19.0
    structlog>=23.2.0

[options.entry_points]
console_scripts =
    voice-translator = voice_translator_pro.cli:main

[options.package_data]
* = *.txt, *.md, *.yml, *.yaml, *.json, *.toml, *.cfg, *.ini

[options.data_files]
share/voice-translator-pro = README.md, LICENSE, requirements.txt

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,*.egg-info,.venv,venv

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = voice_translator_pro

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = --strict-markers --strict-config --cov=voice_translator_pro --cov-report=term-missing --cov-report=html --cov-report=xml

[coverage:run]
source = src/voice_translator_pro
omit = */tests/* */test_* */__pycache__/* */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
